<resources>
    <string name="app_name">WorkingOutSmarter</string>

    <string name="sign_in">SIGN IN</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="or">OR</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet? <font color="#FF000000">Sign up now</font> </string>
    <string name="forgot_password"><font color="#FF000000"> <u>Forgot password?</u></font> </string>
    <string name="name">Name</string>
    <string name="create_account">Create account</string>
    <string name="createAccount">Create Account</string>
    <string name="emailForSignUp">Email</string>
    <string name="email_box_SignUp">Email</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="log_in">Login</string>
    <string name="please_sign_in_to_continue">Please sign in to continue</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="enter_your_email_address_to_reset_your_password">Enter your email address to reset your password</string>
    <string name="submit">Submit</string>
    <string name="sign_out">Sign out</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="lock_image">lock_image</string>
    <string name="or2">OR</string>
    <string name="client_ID">264762762980-cus4762gbsvqtjl5ua9l1ga6c5s1l4pf.apps.googleusercontent.com</string>
    <string name="SHA1">7C:AA:CB:15:DC:78:53:52:33:B9:F5:AE:7A:70:3C:8F:DF:64:F8:93</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="age">Age</string>
    <string name="profileimage">ProfileImage</string>
    <string name="search_exercise">Search Exercise</string>
    <string name="search">Search</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="workouts">Workouts</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="home">Home</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="equipment_needed">Equipment needed</string>
    <string name="instructions">Instructions</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="Sets">Sets</string>
    <string name="repetitions">Repetitions</string>
    <string name="add_set">Add Set</string>
    <string name="Set">Set</string>
    <string name="add_to_list">Add to list</string>
    <string name="workout_name">Workout Name</string>
    <string name="confirm">Confirm</string>
    <string name="please_select_a_date_for_de_workout">Please select a date for de workout</string>
    <string name="overview">Overview</string>
    <string name="no_exercises_were_selected_please_navigate_to_workouts_page_and_add_one_to_the_list">No exercises were selected. Please navigate to Workouts page and add one to the list!</string>
    <string name="edit_icon">" "</string>
    <string name="logout">Logout</string>
    <string name="profile_image">Profile Image\n</string>
    <string name="username">username</string>
</resources>